<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:hint="@string/BtnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextCostsDate"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="left|center_vertical" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCosts"
        android:inputType="number"
        android:layout_alignBottom="@+id/editTextCostsDate"
        android:layout_alignRight="@+id/editTextCostsInfo"
        android:layout_alignEnd="@+id/editTextCostsInfo"
        android:layout_toRightOf="@+id/editTextCostsDate"
        android:layout_toEndOf="@+id/editTextCostsDate"
        android:hint="@string/BtnSum"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCostsInfo"
        android:hint="@string/BtnDescription"
        android:layout_below="@+id/editTextCostsDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="left|top" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnAdd"
        android:id="@+id/btnCostsSave"
        android:onClick="onClick"
        android:layout_gravity="right|center_vertical"
        android:layout_alignBottom="@+id/btnDeleteAll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Удалить все записи"
        android:id="@+id/btnDeleteAll"
        android:onClick="onClick"
        android:layout_below="@+id/editTextCostsInfo"
        android:layout_alignRight="@+id/editTextCostsInfo"
        android:layout_alignEnd="@+id/editTextCostsInfo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scrollView"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@+id/btnCostsSave">

        <LinearLayout
            android:id="@+id/linearLayoutContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/buttonActivityIncomes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/BtnIncomes"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/buttonActivitySettings"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/BtnSettings"
            android:onClick="onClick"/>

    </LinearLayout>


</RelativeLayout>
